--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Remote</title>
 
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,10 +30,15 @@
         </div>
         <div class="collapse navbar-collapse" id="mpr-navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#"><span class="glyphicon glyphicon-play"></span> Play</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-pause"></span> Pause</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-step-backward"></span> Prev</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-step-forward"></span> Next</a></li>
+                <li>
+                    <a id="play-btn" href="#">
+                        <span class="glyphicon glyphicon-play"></span><span class="glyphicon glyphicon-pause"></span>
+                        Play/Pause
+                    </a>
+                </li>
+                <li><a id="stop-btn" href="#"><span class="glyphicon glyphicon-stop"></span> Stop </a></li>
+                <li><a id="prev-btn" href="#"><span class="glyphicon glyphicon-step-backward"></span> Prev </a></li>
+                <li><a id="next-btn" href="#"><span class="glyphicon glyphicon-step-forward"></span> Next </a></li>
             </ul>
         </div>
 
