--- a/client/index.html
+++ b/client/index.html
@@ -20,34 +20,35 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mpr-navbar-collapse">
+            <a class="navbar-brand" id="play-btn" href="#">
+                <span class="glyphicon glyphicon-play"></span><span class="glyphicon glyphicon-pause"></span>
+                Play/Pause
+            </a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#my-navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <span class="navbar-brand">Remote</span>
         </div>
-        <div class="collapse navbar-collapse" id="mpr-navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a id="play-btn" href="#">
-                        <span class="glyphicon glyphicon-play"></span><span class="glyphicon glyphicon-pause"></span>
-                        Play/Pause
-                    </a>
-                </li>
+        <div class="collapse navbar-collapse" id="my-navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
                 <li><a id="stop-btn" href="#"><span class="glyphicon glyphicon-stop"></span> Stop </a></li>
                 <li><a id="prev-btn" href="#"><span class="glyphicon glyphicon-step-backward"></span> Prev </a></li>
                 <li><a id="next-btn" href="#"><span class="glyphicon glyphicon-step-forward"></span> Next </a></li>
             </ul>
         </div>
-
     </div>
 </nav>
 <div class="container" role="main">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-9 col-sd-9 col-xs-9">
             <ol id="breadcrumbs" class="breadcrumb"></ol>
+        </div>
+        <div class="col-md-3 col-sd-3 col-xs-3 text-right add-current">
+            <a href="#" class="add-current">
+                <span class="glyphicon glyphicon-play-circle"></span> Play
+            </a>
         </div>
     </div>
     <div class="row">
@@ -55,10 +56,10 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th>#</th>
-                    <th>Name</th>
-                    <th>Size</th>
-                    <th></th>
+                    <th class="tcol-num">#</th>
+                    <th class="tcol-name">Name</th>
+                    <th class="tcol-size">Size</th>
+                    <th class="tcol-action"></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -80,12 +81,12 @@
 
 <script type="text/template" id="item-template">
     <tr>
-        <td><%= (itemId+1) %></td>
-        <td><%= itemLink %></td>
-        <td><%= itemSize %></td>
-        <td>
+        <td class="tcol-num"><%= (itemId+1) %></td>
+        <td class="tcol-name"><%= itemLink %></td>
+        <td class="tcol-size"><%= itemSize %></td>
+        <td class="tcol-action">
             <a href="#" data-id="<%= itemId %>" class="add">
-                <span class="glyphicon glyphicon-play-circle"></span> Add
+                <span class="glyphicon glyphicon-play-circle"></span> Play
             </a>
         </td>
     </tr>
